<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.fuhsd.hhs.music"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/splashScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#011f5f" >

        <TextView
            android:id="@+id/loadingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="30dip"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/loadingMessage"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dip" />

        <ImageView
            android:id="@+id/splashImageBg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="#406627" />

        <ImageView
            android:id="@+id/splashImagePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dip"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher_mustanghhsmusic" />
        
        <TextView
            android:id="@+id/splashText1"
            android:text="@string/splash_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/splashImagePic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />
         
        <TextView
            android:id="@+id/splashText2"
            android:text="@string/splash_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/splashText1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="normal" />
        
        <TextView
            android:id="@+id/splashText3"
            android:text="@string/splash_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/splashText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="normal" />
        
    </RelativeLayout>

    <!-- 
    <com.viewpagerindicator.TitlePageIndicator
        android:id="@+id/pagerTitleStrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:titlePadding="50dp" />
    -->
    <org.fuhsd.hhs.music.MyViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- 
    <FrameLayout
        android:id="@+id/menuLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textViewMenuItemAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/menu_item_bg_selector"
            android:text="@string/about_menu_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" 
            android:padding="10dp"
            />
    </FrameLayout>
    -->
    
</RelativeLayout>